--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 Black-Horne-android/bin
 Black-Horne-desktop/bin
+Black-Horne-desktop/assets
 Black-Horne-html/war
+Black-Horne-html/gwt-unitCache
 Black-Horne/bin
