--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Black-Horne-desktop/assets
 Black-Horne-html/war
 Black-Horne-html/gwt-unitCache
 Black-Horne/bin
+apollo-warrior/bin
+apollo-entity-framework/bin
